# client_server

./: CMakeLists.txt  Readme  main.cpp
Client/: CMakeLists.txt  main.cpp
Client/Connection/: IConnection.h
Client/Connection/TCP/ClientWorker/: TCPConncetion.cpp  TCPConnection.h
Client/Connection/TCP/TCPEntities/: TCPEntities.h
Client/IConnection/: IConnection.h
Client/IConnection/Connection/: Connection.cpp  Connection.h
Client/IConnection/Connection/TCP/: TCP.h
Client/InitialConditions/: IInitialConditions.cpp  IInitialConditions.h  InitialConditions.cpp  InitialConditions.h  JsonInitialConditions.cpp  JsonInitialConditions.h
Client/InitialConditions/JSONSerialize/: JsonInitialConditions.cpp  JsonInitialConditions.h
Client/InitialEntities/: InitialEntities.h
Client/json/: .PKGINFO
Client/lib/json/: .BUILDINFO  .MTREE
Entities/: ClientRequest.h  ClientRequestConverter.cpp  ClientRequestConverter.h
Executor/: FunctionExecutor.cpp
Parsers/: IDataParser.cpp  IDataParser.h  JSONParser.cpp  JSONParser.h  XmlParser.cpp
Serializor/: ISerializor.cpp  ISerializor.h  JSONSerializor.cpp  JSONSerializor.h  XMLSerializor.cpp
Server/: CMakeLists.txt  main.cpp
Server/Connection/: IConnection.h
Server/Connection/TCP/ClientWorker/: TCPConncetion.cpp  TCPConnection.h
Server/Connection/TCP/TCPEntities/: TCPEntities.h
Server/Converter/: ClientRequestConverter.cpp  ClientRequestConverter.h
Server/Deserializer/: IDeserializer.h  JSONDeserializer.h  JSONParser.cpp  XmlDeserializer.h  XmlParser.cpp
Server/Entities/: ClientRequestConverter.cpp  ServerResult.h
Server/Executor/: FunctionExecutor.cpp  FunctionExecutor.h  IExecutor.cpp  IExecutor.h
Server/IConnection/: IConnection.h
Server/IConnection/Connection/: Connection.cpp  Connection.h
Server/IConnection/Connection/TCP/: TCP.h
Server/OperationResult/: ResultContainer.h
Server/Parsers/: IDataParser.cpp  JSONParser.cpp  XmlParser.h
Server/Serializer/: ISerializer.cpp  ISerializer.h  JSONSerializer.cpp  JSONSerializer.h  XMLSerializer.cpp  XMLSerializer.h
Server/Serializer/JSON/: JSONDeserializer.cpp  JSONDeserializer.h  JSONSerializer.cpp  JSONSerializer.h
Server/Serializer/XML/: XMLSerializer.cpp  XMLSerializer.h  XmlDeserializer.cpp  XmlDeserializer.h
Server/Serializor/: JSONSerializor.h  XMLSerializor.h
